cluster/core/traefik-forward-auth/Middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-sso
  namespace: networking
spec:
  forwardAuth:
    address: http://traefik-sso.networking.svc.cluster.local:4181
    authResponseHeaders:
      - "X-Forwarded-User"
    trustForwardHeader: true
