cluster/core/traefik-forward-auth/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-sso
  namespace: networking
  labels:
    app: traefik-sso
spec:
  selector:
    matchLabels:
      app: traefik-sso
  template:
    metadata:
      labels:
        name: traefik-sso
        app: traefik-sso
    spec:
      containers:
        - name: traefik-sso
          image: thomseddon/traefik-forward-auth:2-arm
          imagePullPolicy: Always
          ports:
            - containerPort: 4181
