cluster/core/traefik-forward-auth/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-sso
  namespace: networking
spec:
  selector:
    app: traefik-sso
  ports:
    - protocol: TCP
      port: 4181
      targetPort: 4181
